Update DriveToConeNode.java